deployment/resources/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: jenkins-namespace
spec: {}
status: {}
